# daisyTools

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
js_engine/: index.html
plugins/: env.vite.ts
src/: App.vue  main.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/actions/web/: Cargo.toml
src-tauri/actions/web/src/: lib.rs
src-tauri/aster_codegen/: Cargo.toml
src-tauri/aster_codegen/src/: action.template.ts  error.rs  extract.rs  lib.rs  main.rs  utils.rs
src-tauri/aster_codegen/src/extract/: cargo_metadata.rs  error.rs  i18n.rs
src-tauri/aster_codegen/src/extract/i18n/: action.rs  options.rs  result.rs
src-tauri/aster_common/: Cargo.toml
src-tauri/aster_common/src/: action.rs  attr.rs  card.rs  collect.rs  hot_lib_reloader.rs  i18n.rs  lib.rs  nesting.rs  rust.rs  typescript.rs  utils.rs
src-tauri/aster_common/src/action/: form.rs  param.rs  result.rs  stat.rs
src-tauri/aster_common/src/hot_lib_reloader/: error.rs  lib_reloader.rs
src-tauri/aster_common/src/rust/: expr.rs  lit.rs
src-tauri/aster_common/src/typescript/: expr.rs
src-tauri/aster_common/src/typescript/expr/: base.rs  object.rs
src-tauri/aster_loader/: Cargo.toml  schema.json
src-tauri/aster_loader/src/: collector.rs  executor.rs  lib.rs  manifest.rs
src-tauri/aster_macro/: Cargo.toml
src-tauri/aster_macro/src/: hot_lib_reloader.rs  lib.rs  loader.rs
src-tauri/aster_macro/src/action/: define.rs  mod.rs  result.rs
src-tauri/aster_macro/src/hot_lib_reloader/: util.rs
src-tauri/aster_macro/src/hot_lib_reloader/hot_module/: attribute.rs  code_gen.rs  module_body.rs
src-tauri/aster_macro/src/loader/: impl.rs  ty.rs
src-tauri/aster_macro/src/utils/: mod.rs
src-tauri/capabilities/: default.json
src-tauri/common/: Cargo.toml
src-tauri/common/src/: action.rs  application.rs  executor.rs  lib.rs  ty.rs  utils.rs
src-tauri/common/src/action/: entry.rs  error.rs  impl.rs  manager.rs
src-tauri/common/src/ty/: error.rs  type_convert.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: command.rs  config.rs
src-tauri/src/elevation/: error.rs  file.rs  mod.rs
src-tauri/src/ipc/: client.rs  error.rs  message.rs  mod.rs  service.rs
src-tauri/src/runtime/: error.rs  javascript.rs  mod.rs
src-tauri/src/service/: action.rs  error.rs  mod.rs  service_main.rs  status.rs  task.rs  trigger.rs
src-tauri/src/service/action/: command.rs  debug.rs  index.md  loader.rs  program.rs  web.rs
src-tauri/src/service/task/: error.rs  scheduler.rs
src-tauri/src/service/trigger/: command.rs  error.rs  time.rs
src-tauri/src/utils/: windows.rs
src-tauri/vase/: Cargo.toml  expand.rs  readme.md
src-tauri/vase/src/: ipc.rs  lib.rs
src-tauri/vase/src/bud/: ty.rs
src-tauri/vase/src/ipc/: algorithm.rs  codec.rs  device.rs  envelope.rs  error.rs  layers.rs  transport.rs
src-tauri/vase/src/ipc/algorithm/: compression.rs  crypto.rs
src-tauri/vase/src/ipc/algorithm/compression/: gzip.rs  traits.rs  zstd.rs
src-tauri/vase/src/ipc/algorithm/crypto/: aes256gcm.rs  chacha20poly1305.rs  traits.rs
src-tauri/vase/src/ipc/device/: status.rs  traits.rs
src-tauri/vase/src/ipc/device/impls/: local_socket.rs
src-tauri/vase/src/ipc/envelope/: flags.rs  meta.rs  request.rs  response.rs
src-tauri/vase/src/ipc/layers/: connection.rs  middleware.rs  router.rs  strategy.rs  traits.rs
src-tauri/vase/src/ipc/layers/connection/: context.rs  layer.rs
src-tauri/vase/src/ipc/layers/handler/: layer.rs
src-tauri/vase/src/ipc/layers/middleware/: layer.rs  serde.rs  traits.rs
src-tauri/vase/src/ipc/layers/router/: layer.rs  router.rs
src-tauri/vase/src/ipc/layers/strategy/: context.rs  layer.rs  session_crypto.rs
src-tauri/vase/src/ipc/transport/: driver.rs  impls.rs  msg.rs  traits.rs  utils.rs
src-tauri/vase/src/ipc/transport/driver/: engine.rs  generic.rs  session.rs
src-tauri/vase/src/ipc/transport/impls/: local_socket.rs  local_socket_new.rs  mock.rs
src-tauri/vase/src/utils/: random.rs  traits.rs
src-tauri/vase_macro/: Cargo.toml
src-tauri/vase_macro/src/: data_structure.rs  device.rs  lib.rs  transport.rs
src-tauri/vase_macro/src/data_structure/: pipeline.rs  tlv.rs
src-tauri/vase_macro/src/device/: expose.rs  handle.rs  impls.rs  listen.rs
src-tauri/vase_scan/: Cargo.toml
src-tauri/vase_scan/src/: error.rs  index.rs  lib.rs  utils.rs
src-tauri/vase_scan/src/scan/: dir.rs  file.rs
src-tauri/vase_scan/src/scan/file/: attr_entry.rs  no_attr.rs
src-tauri/vase_scan/src/scan/file/no_attr/: handler.rs
src-tauri/vasing/: Cargo.toml
src-tauri/vasing/src/: lib.rs  signal.rs  stage.rs  test.rs
src-tauri/vasing_macro/: Cargo.toml
src-tauri/vasing_macro/src/: entry.rs  lib.rs
src-tauri/vasing_macro/src/entry/: generate.rs  parse.rs
src/ai/: aiInstance.ts  component.ts  index.d.ts  index.ts
src/bus/: index.ts
src/components/: ActionButtonGroup.vue  Alert.vue  Badge.vue  Card.vue  CompactStat.vue  Dropdown.vue  Form.type.ts  Form.utils.ts  Form.vue  Help.vue  Icon.vue  JsonNode.utils.ts  JsonNode.vue  JsonTree.vue  Line.vue  ListSelect.vue  Markdown.vue  Menu.vue  Modal.vue  Plug.help.ts  Plug.vue  RadialProgress.vue  SelectBtn.vue  ServiceState.vue  Socket.vue  Stat.utils.ts  Stat.vue  StatusBadge.vue  Task.vue  TitleBar.vue
src/composable/: useFind.ts  useKeys.ts  useScopeI18n.ts  useScopeStore.ts
src/directives/: clickOutside.ts  eventDelegation.ts  onHover.ts  tooltip.ts
src/i18n/: utils.ts
src/inject/: index.ts
src/invoke/: actions.ts  helper.ts  index.ts  serviceState.ts  triggers.ts  type.ts
src/js_engine/: main.ts
src/pages/: Action.vue  Home.vue  Settings.help.ts  Settings.vue  Task.vue  Trigger.vue  Workflow.Edge.vue  Workflow.utils.ts  Workflow.vue  pages.ts
src/style/: transition.css
src/utils/: debug.ts  mode.ts  object.ts  render.ext.ts  render.ts  timing.ts  type.ts
src/views/: AppView.vue  CardView.Button.vue  CardView.vue  (+3 more)
(+23 files in other folders)
