[package]
name = "aster_common"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
crc32fast = "1.3.2"
darling = { workspace = true }
libloading = "^0.8"
log = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swc_common = "18.0.1"
swc_ecma_ast = "20.0.1"
syn = { workspace = true }
thiserror = { workspace = true }
toml = "0.9.5"
toml_edit = "0.23.4"
uuid = { workspace = true }

[features]
default = []
uuid = []
verbose = []
