[package]
name = "aster_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
inventory = "0.3.20"
paste = "1.0"
proc-macro-error = { version = "1", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }

common = { path = "../common" }
aster_common = { path = "../aster_common" }

darling = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
