[package]
name = "vase"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
interprocess = { version = "2.2.3", features = ["tokio"] }

tokio = { workspace = true }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }

inventory = "0.3.20"
uuid = { workspace = true }
time = { workspace = true }
bytes = "1.10.1"
bitflags = "2.9.4"

bincode = { version = "2.0.1", features = ["serde"] }
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
rand = { workspace = true }
aead = "0.5"
aes-gcm = "0.10.3"
zstd = "0.13.3"
flate2 = { version = "1.0.17", features = ["zlib-rs"], default-features = false }
async-trait = "0.1.89"

async-channel = "2.5.0"

vase_macro = { path = "../vase_macro" }
vasing = { path = "../vasing" }
