[package]
name = "vase_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
aster_common = { path = "../aster_common" }
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
vacro = { version = "0.2.3" }
