[package]
name = "vase_scan"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

syn = { version = "2.0", features = ["full", "visit-mut"] }
proc-macro2 = "1.0"
quote = "1.0"
walkdir = "2"
csv = "1.3.1"

crc32fast = "1.5.0"
