[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
aster_macro = { path = "../../aster_macro" }
common = { path = "../../common" }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
